--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<br/>< style="text/javascript" src="http://wa7ed.mn.elnas.googlepages.com/rec-posts.js"></>< style="text/javascript">var numposts = 5;var showpostdate = true;var showpostsummary = true;var numchars = 100;var standardstyling = true;</>< src="http://egypt-goldentours1974.blogspot.com/feeds/posts/default?orderby=updated&alt=json-in-&callback=showrecentposts"></> 
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1> hello world</h1>
+<p>its my  first dApp.</p>
+
+</body>
+</html>
